# meta-openenv-hackathon

./: .gitignore  Dockerfile  README.md  SETUP_COMPLETE.md  START_HERE.md  STATUS_REPORT.md  WORKING_GUIDE.md  baseline_results.json  example_usage.py  inference.py  openenv.yaml  pyproject.toml  quick_demo.py  requirements.txt  test_01_models.py  test_02_fault_injector.py  test_03_grader.py  test_04_env_reset_step.py  test_05_full_episode.py
environment/: etl_env.py  fault_injector.py  grader.py  models.py  reward.py  server.py
server/: app.py
