[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-etl-pipeline-agent"
version = "0.1.0"
description = "OpenEnv ETL pipeline agent environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"openenv-core>=0.2.0",
]

[project.scripts]
server = "environment.server:main"
